[gd_scene load_steps=5 format=3 uid="uid://b6a477racgkvi"]

[ext_resource type="Script" path="res://FrameAdvance.gd" id="1_du3od"]
[ext_resource type="Script" path="res://level.gd" id="1_ryj6o"]
[ext_resource type="PackedScene" uid="uid://br35kps3m0oaf" path="res://player.tscn" id="2_wcdot"]
[ext_resource type="Script" path="res://enemy_spawner.gd" id="3_yc6di"]

[node name="Debug" type="Node2D"]
process_mode = 3
script = ExtResource("1_du3od")

[node name="Level" type="Sprite2D" parent="."]
process_mode = 1
script = ExtResource("1_ryj6o")

[node name="RestartTimer" type="Timer" parent="Level"]
wait_time = 0.1
one_shot = true

[node name="Player" parent="Level" instance=ExtResource("2_wcdot")]
collision_mask = 0

[node name="EnemySpawner" type="Sprite2D" parent="Level"]
script = ExtResource("3_yc6di")

[node name="SpawnTimer2" type="Timer" parent="Level/EnemySpawner"]
wait_time = 0.5

[connection signal="timeout" from="Level/RestartTimer" to="Level" method="_on_restart_timer_timeout"]
[connection signal="dead" from="Level/Player" to="Level/Player" method="_on_dead"]
[connection signal="timeout" from="Level/EnemySpawner/SpawnTimer2" to="Level" method="_on_spawn_timer_timeout"]
